# debias-wikidata

./: .gitignore  README.md  pyproject.toml
data/: cache_gadm_lookups.json  cache_ghs_urban_shares.json  cache_iso3_to_qid.json  cache_language_shares_top2.json  cache_place_coordinates.json  cache_urban_shares.json
tests/: test_bias_detectors.py  test_constraints.py  test_entity.py  test_report.py
wikidata_coverage/: __init__.py  cli.py
wikidata_coverage/access/: api.py  cache.py  sparql.py
wikidata_coverage/bias/: __init__.py  base.py  baselines.py  demographic.py  ethnicity.py  gadm.py  gender.py  geographic.py  ghs.py  intersectionality.py  linguistic.py  metrics.py  report.py  rural_urban.py  sexual_orientation.py
wikidata_coverage/core/: entity.py  finding.py  report.py
wikidata_coverage/detectors/: base.py  class_profile.py  consistency.py  constraints.py  existence.py
wikidata_coverage/scoring/: severity.py
wikidata_coverage/suggest/: fixers.py
