[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikidata-coverage"
version = "0.1.0"
description = "Detect, assess, and suggest fixes for data modeling and coverage gaps in Wikidata"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "SPARQLWrapper>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]
dumps = [
    "ijson>=3.2.0",
]

[project.scripts]
wdcoverage = "wikidata_coverage.cli:main"

[tool.setuptools.packages.find]
include = ["wikidata_coverage*"]
